Avoid too wide containers in news, Twitter and events

--- a/_sass/container.scss
+++ b/_sass/container.scss
@@ -1,3 +1,7 @@
+div {
+  max-width: 100%;
+}
+
 section {
   width: 100%;
   box-sizing: border-box;
